[project]
name = "ak-logger"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
authors = [
    {name = "appknox", email = "engineering@appknox.com"},
    {name = "dhilipsiva", email = "dhilipsiva@pm.me"},
]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/appknox/aklogger"

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.isort]
profile = "black"
