[tool.poetry]
name = "aklogger"
version = "0.1.2"
description = "A generic logging package for python projects"
authors = ["Appknox <engineering@appknox.com>"]
license = "MIT"

keywords = ['appknox', 'logging', 'aklogger']
repository = "https://github.com/appknox/aklogger"
homepage = "https://github.com/appknox/aklogger"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
slacker = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
coverage = "^5.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
